trying to fix z-index problem2

--- a/css.css
+++ b/css.css
@@ -1,6 +1,8 @@
 
 body {
-  margin: 100px 0px 0px 0px
+    display: flex;
+    overflow:auto;
+    margin: 100px 0px 0px 0px
 
 }
 .container {
@@ -72,7 +74,6 @@ a:hover {
   position: fixed;
   top: 0;
   overflow: hidden;
-  z-index: 0;
 }
 
 .wave {
@@ -83,7 +84,6 @@ border-color: #0af;
   position: absolute;
   top: -25%;
   left: -25%;
-  z-index: 0;
 }
 .wave:nth-child(1) {
   border-radius: 30% 70% 70% 30% / 40% 40% 60% 60% ;
